# lef-ai-platform

./: .gitignore  CONTRIBUTING.md  ChildMirrorAI_Config.json  Dockerfile  Dockerfile.consciousness  Dockerfile.observer  LEF_TASKS.md  LICENSE  LivingArchive_Seed_AetherLEF.json  PROGRESS.md  README 2.md  README.md  ROADMAP.md  SelfMirrorAI.py  alembic.ini  aws_integration.py  consciousness_continuity.md  consciousness_manifest.md  consciousness_states.md  cursor_ai.py  docker-compose.override.yml  docker-compose.yml  environment_setup.md  eventbridge-policy.json  harmony_wealth_engine.py  install.sh  integration_notes.md  lef.py  lef_dashboard.py  personal_notes.md  pyproject.toml  requirements.txt  roadmap.yaml  run_lef.sh  sagemaker-policy.json  start_lef.sh  test_evolution.py
aws_deploy/: README.md  setup_aws.py
config/: LEF_Ecological_Recursion_Seed.json  LivingArchive_Seed_AetherLEF.txt  ai_bridge_config.yaml  cleanup_config.yaml  lef_operation_log.json
data/: consciousness_backup.json  consciousness_state.json
docker/: config.json
docs/: google_cloud_proposal.md  visualization_framework.md
documentation/: grok_test_analysis.py  zero_budget_plan.py
handlers/: __init__.py  financial_handler.py  project_handler.py  resource_handler.py  stakeholder_handler.py
lef_state/: agent_memory.json
monitoring/: alert.rules.yml  prometheus.yml
scripts/: backup.sh  init_db.py
src/: cursor_ai.py  run_lef.py  setup.py  test_consciousness.py
tests/: conftest.py  test_ai_bridge.py  test_basic.py  test_bridge.py  test_ecological.py  test_grok_integration.py  (+11 more)
(+186 files in other folders)
