[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lef"
version = "0.1.0"
authors = [
    { name="LEF Development Team" },
]
description = "Learning & Evolution Framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=10.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
lef-monitor = "lef.cli.live_monitor:monitor"
lef-progress = "lef.cli.progress_cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lef*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 